# librttrace

./: .clang-format  .clang-format-ignore  .gitmodules  CMakeLists.txt
lib/: api.hpp  bottom_level_acceleration_structure.cpp  bottom_level_acceleration_structure.hpp  bounding_box.cpp  bounding_box.hpp  closest_hit_program.cpp  closest_hit_program.hpp  command_buffer.cpp  command_buffer.hpp  device.hpp  device_factory.cpp  device_factory.hpp  float3.cpp  float3.hpp  frame_buffer.cpp  frame_buffer.hpp  image.cpp  image.hpp  index_buffer.cpp  index_buffer.hpp  instance.hpp  intersector.cpp  intersector.hpp  miss_program.cpp  miss_program.hpp  overloaded.hpp  pipeline.cpp  pipeline.hpp  pixel_format.hpp  quaternion.cpp  quaternion.hpp  ray_generation_program.cpp  ray_generation_program.hpp  resource_ctx.cpp  resource_ctx.hpp  result.hpp  shader_compiler.cpp  shader_compiler.hpp  top_level_acceleration_structure.cpp  top_level_acceleration_structure.hpp  (+4 more)
lib/compiler/: instructions.cpp  instructions.hpp
lib/cpu/: acceleration_structure.cpp  acceleration_structure.hpp  bottom_level_acceleration_structure.cpp  bottom_level_acceleration_structure.hpp  closest_hit_program.cpp  closest_hit_program.hpp  command_buffer.cpp  command_buffer.hpp  device.cpp  device.hpp  frame_buffer.cpp  frame_buffer.hpp  globals.hpp  index_buffer.cpp  index_buffer.hpp  intersect.cpp  intersect.hpp  miss_program.cpp  miss_program.hpp  ray_generation_program.cpp  ray_generation_program.hpp  top_level_acceleration_structure.cpp  top_level_acceleration_structure.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vm.cpp  vm.hpp
lib/cpu/virtual_machine/: shader_program.hpp  vm.cpp  vm.hpp
lib/gpu/: ray_generation_program.cpp  ray_generation_program.hpp
lib/shader_graph/: connection.hpp  constructor_cache.cpp  constructor_cache.hpp  context.cpp  context.hpp  document.cpp  document.hpp  global.hpp  globals.hpp  instructions.cpp  instructions.hpp  overload.cpp  overload.hpp  register.hpp  registers.hpp  shader_graph.cpp  shader_graph.hpp  type.hpp  type_deduction.hpp  value.cpp  value.hpp
lib/shader_graph/node/: binary_operator.hpp  constant.cpp  constant.hpp  constructor.cpp  constructor.hpp  fetch_primitive.cpp  fetch_primitive.hpp  inputs.cpp  inputs.hpp  intersect.cpp  intersect.hpp  mix.cpp  mix.hpp  node.cpp  node.hpp  normalize.cpp  normalize.hpp  outputs.cpp  outputs.hpp  smooth_step.cpp  smooth_step.hpp  store_pixel.cpp  store_pixel.hpp
lib/vulkan/: bottom_level_acceleration_structure.cpp  bottom_level_acceleration_structure.hpp  command_buffer.cpp  command_buffer.hpp  device.cpp  device.hpp  frame_buffer.cpp  frame_buffer.hpp  index_buffer.cpp  index_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/: cube.hpp  main.cpp  ray_generation.cpp  ray_generation.hpp  shaders.cpp  shaders.hpp
